--- a/index2.html
+++ b/index2.html
@@ -54,8 +54,8 @@
         Your browser does not support the video tag.
     </video>
 
-    <!-- Play button that the user clicks -->
-    <button id="playButton">Play Video</button>
+    <!-- Play button with direct message -->
+    <button id="playButton">Click to Play Video</button>
 
     <script>
         var video = document.getElementById("myVideo");
