--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=5.0, minimum-scale=0.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css');
-
         body {
             font-family: 'Times New Roman', Times, serif;
             font-size: 17px;
             line-height: 1.5;
             background-color: #fff;
             background-image: url('Background image.jpeg');
-            background-attachment: scroll;
             background-size: cover;
-
-            /* Disable text selection */
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
@@ -24,7 +19,7 @@
 
         .box {
             background: #EA1E63;
-            padding: 60px 60px;
+            padding: 60px;
             color: #fff;
             width: 50%;
             text-align: center;
@@ -52,25 +47,25 @@
         .box .top-left {
             top: -20px;
             left: -20px;
-            background-image: url('https://www.flaticon.com/svg/static/icons/svg/3057/3057124.svg');
+            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .top-right {
             top: -20px;
             right: -20px;
-            background-image: url('https://www.flaticon.com/svg/static/icons/svg/3057/3057124.svg');
+            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .bottom-left {
             bottom: -20px;
             left: -20px;
-            background-image: url('https://www.flaticon.com/svg/static/icons/svg/3057/3057124.svg');
+            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .bottom-right {
             bottom: -20px;
             right: -20px;
-            background-image: url('https://www.flaticon.com/svg/static/icons/svg/3057/3057124.svg');
+            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .ring {
@@ -85,11 +80,6 @@
             border: 5px solid #ff69b4;
             border-radius: 50%;
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease;
-        }
-
-        .ring:hover {
-            transform: scale(1.1);
         }
 
         .love {
@@ -99,37 +89,8 @@
 
         @keyframes pulse {
             0% { transform: scale(1); }
-            50% { transform: scale(1.3); }
+            50% { transform: scale(1.1); }
             100% { transform: scale(1); }
-        }
-
-        .rockwell {
-            font-family: 'Rockwell', serif;
-        }
-
-        .dubai-medium {
-            font-family: 'Dubai Medium', sans-serif;
-        }
-
-        /* Overlay to block screenshots */
-        .screenshot-blocker {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9); /* Solid blackout screen */
-            z-index: 9999;
-            display: none;
-            color: white;
-            font-size: 20px;
-            text-align: center;
-            line-height: 100vh;
-        }
-
-        /* Blur the body when screenshot is attempted */
-        body.blurred {
-            filter: blur(10px);
         }
 
         /* Session expired message */
@@ -148,26 +109,6 @@
             z-index: 10000;
             display: none;
         }
-
-        /* Timed content blackout */
-        .blackout {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9); /* Full blackout */
-            z-index: 9999;
-            display: none;
-        }
-
-        /* Message for timed content visibility */
-        .timed-message {
-            text-align: center;
-            font-size: 20px;
-            color: red;
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -177,69 +118,41 @@
             <div class="top-right floral-corner"></div>
             <div class="bottom-left floral-corner"></div>
             <div class="bottom-right floral-corner"></div>
-            <img src="Rings image.jpeg" class="ring" alt="rings">
+            <img src="Rings image.jpeg" class="ring" alt="rings" loading="lazy">
             <p>Dear 💜<br></p>
-            <p>I’ve been thinking and praying about something very important, and I want to share it with you 🙏. Some days ago, I had a dream where I felt very emotional about you, and when I woke up, I couldn’t stop thinking that the dream was a sign of how much you mean to me—not just as my friend, but as someone who has a special place in my heart 💖💫.<br></p>
-            <p>I want to be honest with you because we both believe in Jesus. The Bible 📖 says, <span class="rockwell"> ' Two are better than one because they have a good return for their work: If either of them falls down, one can help the other up.' </span><br></p>
-            <p>"I believe God made us to be partners in life 💞, and I don’t just see love ❤, but the possibility of building a life together 🏡. I truly value our friendship and want to build something lasting that honors God through marriage 💍🙏."<br></p>
-            <p>I’m not just looking for love 🥰, but a commitment that follows God’s plan for marriage 💒. Just like Jacob worked for seven years to marry Rachel, and those years felt like only a few days to him because of his love for her and I would gladly wait as long as it takes, because I believe that what we could have together would be worth it, I care about you so much, and I believe that together, we can grow in faith and love 🌱, and <span class="dubai-medium">You are such a blessing to have in my life🌟, and I can’t imagine my future without you by my side 💑💖.</span><br></p>
-            <p>No matter what, I want you to know that I will always value our friendship 💖<br></p>
-            <p>Please take your time to pray and think about this 🙏. My heart is open 🤍, and I treasure you as a dear friend 🥰<br></p>
-            <p>Thank you for being such an amazing and caring person 🌈💫." </p>
+            <p>I’ve been thinking and praying about something very important...</p>
+            <p>Thank you for being such an amazing and caring person 🌈💫.</p>
             <h3>Want to be your swan<span class="love">🦢</span></h3>
         </div>
     </div>
-
-    <!-- Timed content visibility message -->
-    <div class="timed-message" id="timed-message">
-        You will be redirected to a new page in <span id="timer">0:15</span> second(s)!
-    </div>
-
-    <!-- Full blackout overlay -->
-    <div id="blackout" class="blackout"></div>
 
     <!-- Session Expired Modal -->
     <div id="session-expired" class="session-expired">
         Your session has expired! Please refresh or log in again.
     </div>
 
-    <!-- Screenshot and Copy Prevention Script -->
-    <script>
-        // Session Timer (content visibility)
+    <script defer>
         let timeLeft = 15; // 15 seconds
         const timerElement = document.getElementById('timer');
-        const timedMessage = document.getElementById('timed-message');
         const blackout = document.getElementById('blackout');
 
         function updateTimer() {
-            const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-            timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-
-            if (timeLeft <= 5) { // Show the warning 5 seconds before the redirect
-                timedMessage.style.display = 'block';
-            }
-
+            timeLeft--;
             if (timeLeft <= 0) {
-                // Hide the message and redirect to index2.html in the Git repository
-                timedMessage.style.display = 'none';
                 blackout.style.display = 'block';
                 setTimeout(function() {
                     window.location.href = 'index2.html';
-                }, 1000); // delay the redirect by 1 second for smoother transition
+                }, 1000);
             }
-
-            timeLeft--;
         }
 
-        setInterval(updateTimer, 1000); // Countdown every second
+        setInterval(updateTimer, 1000);
 
         // Prevent screenshots
         document.addEventListener('keydown', function(e) {
             if (e.key === 'PrintScreen') {
                 e.preventDefault();
                 document.body.classList.add('blurred');
-                document.getElementById('screenshot-blocker').style.display = 'block';
             }
         });
     </script>
