--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             position: absolute;
             width: 40px;
             height: 40px;
+            background-image: url('Floral corner image.jpeg');
             background-size: contain;
             background-repeat: no-repeat;
         }
@@ -47,25 +48,21 @@
         .box .top-left {
             top: -20px;
             left: -20px;
-            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .top-right {
             top: -20px;
             right: -20px;
-            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .bottom-left {
             bottom: -20px;
             left: -20px;
-            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .box .bottom-right {
             bottom: -20px;
             right: -20px;
-            background-image: url('data:image/svg+xml;base64,...'); /* Optimized */
         }
 
         .ring {
