--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=5.0, minimum-scale=0.5">
+    <title>Proposal Page</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css');
 
@@ -111,66 +112,55 @@
             font-family: 'Dubai Medium', sans-serif;
         }
 
-        /* Overlay to block screenshots */
-        .screenshot-blocker {
+        /* Corner Information Widget */
+        .corner-widget {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9); /* Solid blackout screen */
-            z-index: 9999;
-            display: none;
+            top: 10px;
+            right: 10px;
+            background-color: #002b7f;
             color: white;
-            font-size: 20px;
+            padding: 10px 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            font-size: 16px;
             text-align: center;
-            line-height: 100vh;
+            width: 180px;
         }
 
-        /* Blur the body when screenshot is attempted */
-        body.blurred {
-            filter: blur(10px);
+        .corner-widget .icon {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            margin-bottom: 5px;
         }
 
-        /* Session expired message */
-        .session-expired {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            font-size: 24px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 10000;
-            display: none;
+        .corner-widget .time {
+            font-size: 14px;
+            margin-bottom: 5px;
         }
 
-        /* Timed content blackout */
-        .blackout {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9); /* Full blackout */
-            z-index: 9999;
-            display: none;
+        .corner-widget .date {
+            font-size: 14px;
+            margin-bottom: 5px;
         }
 
-        /* Message for timed content visibility */
-        .timed-message {
-            text-align: center;
-            font-size: 20px;
-            color: red;
-            display: none;
+        .corner-widget .greeting {
+            font-size: 14px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
+    <!-- Corner Widget -->
+    <div class="corner-widget">
+        <div class="icon" id="weather-icon"></div>
+        <div class="time" id="time"></div>
+        <div class="date" id="date"></div>
+        <div class="greeting" id="greeting"></div>
+    </div>
+
     <div class="main">
         <div class="box">
             <div class="top-left floral-corner"></div>
@@ -179,10 +169,13 @@
             <div class="bottom-right floral-corner"></div>
             <img src="Rings image.jpeg" class="ring" alt="rings">
             <p>Dear 💜<br></p>
-            <p>I’ve been thinking and praying about something very important, and I want to share it with you 🙏.<br> ></p> <p>Few months ago, I had a dream where I felt very emotional about you, and when I woke up, I couldn’t stop thinking that the dream was a sign of how much you mean to me—not just as my friend, but as someone who has a special place in my heart 💖💫.<br></p>
+            <p>I’ve been thinking and praying about something very important, and I want to share it with you 🙏.<br> ></p> 
+            <p>Few months ago, I had a dream where I felt very emotional about you, and when I woke up, I couldn’t stop thinking that the dream was a sign of how much you mean to me—not just as my friend, but as someone who has a special place in my heart 💖💫.<br></p>
             <p>I want to be honest with you because we both believe in Jesus. The Bible 📖 says, <span class="rockwell"> '' Two are better than one because they have a good return for their work: If either of them falls down, one can help the other up.'' </span><br></p>
             <p>"I believe God made us to be partners in life 💞, and I don’t just see love ❤, but the possibility of building a life together 🏡. I truly value our friendship and want to build something lasting that honors God through marriage 💍🙏."<br></p>
-            <p>I’m not just looking for love 🥰, but a commitment that follows God’s plan for marriage 💒.<br></p> <p>Just like Jacob worked for seven years to marry Rachel, and those years felt like only a few days to him because of his love for her and I would gladly wait as long as it takes, because I believe that what we could have together would be worth it.<br></p> <p>I care about you so much, and I believe that together, we can grow in faith and love 🌱, and <span class="dubai-medium">You are such a blessing to have in my life🌟, and I can’t imagine my future without you by my side 💑💖.</span><br></p>
+            <p>I’m not just looking for love 🥰, but a commitment that follows God’s plan for marriage 💒.<br></p> 
+            <p>Just like Jacob worked for seven years to marry Rachel, and those years felt like only a few days to him because of his love for her and I would gladly wait as long as it takes, because I believe that what we could have together would be worth it.<br></p> 
+            <p>I care about you so much, and I believe that together, we can grow in faith and love 🌱, and <span class="dubai-medium">You are such a blessing to have in my life🌟, and I can’t imagine my future without you by my side 💑💖.</span><br></p>
             <p>No matter what, I want you to know that I will always value our friendship 💖<br></p>
             <p>Please take your time to pray and think about this 🙏. My heart is open 🤍, and I treasure you as a dear friend 🥰<br></p>
             <p>Thank you for being such an amazing and caring person 🌈💫." </p>
@@ -190,62 +183,37 @@
         </div>
     </div>
 
-    <!-- Timed content visibility message -->
-    <div class="timed-message" id="timed-message">
-        You will be redirected to a new page in <span id="timer">2:30</span> second(s)!
-    </div>
-
-    <!-- Full blackout overlay -->
-    <div id="blackout" class="blackout"></div>
-
-    <!-- Session Expired Modal -->
-    <div id="session-expired" class="session-expired">
-        Your session has expired! Please refresh or log in again.
-    </div>
-
-    <!-- Screenshot and Copy Prevention Script -->
     <script>
-        // Session Timer (content visibility)
-        let timeLeft = 150; // 2 minutes 30 seconds
-        const timerElement = document.getElementById('timer');
-        const timedMessage = document.getElementById('timed-message');
-        const blackout = document.getElementById('blackout');
+        async function updateWidget() {
+            const now = new Date();
+            const options = { timeZone: 'Asia/Kolkata', hour12: true, hour: '2-digit', minute: '2-digit' };
+            const timeIST = now.toLocaleTimeString('en-IN', options);
+            const dateIST = now.toLocaleDateString('en-IN', { weekday: 'short', day: 'numeric', month: 'short', year: 'numeric' });
+            document.getElementById('time').textContent = timeIST;
+            document.getElementById('date').textContent = dateIST;
 
-        function updateTimer() {
-            const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-            timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+            const hourIST = now.getHours();
+            let greeting = "Good Morning!";
+            if (hourIST >= 12 && hourIST < 17) greeting = "Good Afternoon!";
+            else if (hourIST >= 17) greeting = "Good Evening!";
+            document.getElementById('greeting').textContent = greeting;
 
-            if (timeLeft <= 5) { // Show the warning 5 seconds before the redirect
-                timedMessage.style.display = 'block';
+            const apiKey = "your_openweathermap_api_key"; // Replace with your API key
+            const city = "Rajahmundry";
+            try {
+                const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${apiKey}`);
+                const weatherData = await response.json();
+                const temp = weatherData.main.temp;
+                const weatherIcon = `http://openweathermap.org/img/wn/${weatherData.weather[0].icon}@2x.png`;
+                document.getElementById('weather-icon').style.backgroundImage = `url('${weatherIcon}')`;
+                document.getElementById('time').textContent += ` ${temp.toFixed(1)} °C`;
+            } catch (error) {
+                console.error("Error fetching weather data:", error);
             }
-
-            if (timeLeft <= 0) {
-                // Hide the message and redirect to index2.html in the Git repository
-                timedMessage.style.display = 'none';
-                blackout.style.display = 'block';
-                setTimeout(function() {
-                    window.location.href = 'index2.html';
-                }, 1000); // delay the redirect by 1 second for smoother transition
-            }
-
-            timeLeft--;
         }
 
-        setInterval(updateTimer, 1000); // Countdown every second
-
-        // Block screenshots (detect PrtSc or Ctrl+PrtSc)
-        document.addEventListener('keyup', (e) => {
-            if (e.key === 'PrintScreen') {
-                document.querySelector('.screenshot-blocker').style.display = 'block';
-            }
-        });
-
-        // Block copy action
-        document.addEventListener('copy', (e) => {
-            e.preventDefault();
-            alert('Copying is disabled on this page.');
-        });
+        updateWidget();
+        setInterval(updateWidget, 60000);
     </script>
 </body>
 </html>
