--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
             let greeting = "";
 
             if (hours >= 5 && hours < 12) {
-                greeting = "Good Morning!";
+                greeting = "Good Morning Praveena!";
             } else if (hours >= 12 && hours < 17) {
-                greeting = "Good Afternoon!";
+                greeting = "Good Afternoon Praveena!";
             } else if (hours >= 17 && hours < 21) {
-                greeting = "Good Evening!";
+                greeting = "Good Evening Praveena!";
             } else {
-                greeting = "Good Night!";
+                greeting = "Good Night Praveena!";
             }
 
             document.getElementById("greeting-message").textContent = greeting;
